fixed service builder
